# snowball-rs

./: .gitignore  Cargo.toml  in.sn  test.sn
src/: codegen.rs  lib.rs  main.rs  snowball.lalrpop
src/ast/: attrs.rs  mod.rs  nodes.rs  source.rs  typed.rs
src/backend/: codegen.rs  jit_codegen.rs  mod.rs
src/compiler/: mod.rs
src/frontend/: ast.rs  lexer.rs  mod.rs  module.rs  parser.rs  type_checker.rs
src/frontend/lexer/: mod.rs  token.rs
src/reports/: mod.rs
src/utils/: colors.rs  mod.rs
