[package]
name = "snowball-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
clap = { version = "4.2.7", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
lalrpop-util = { version = "0.19.9", features = ["lexer"] }

[build-dependencies]
lalrpop = "0.19.0"